--- a/css.css
+++ b/css.css
@@ -1,9 +1,11 @@
-form{ width:auto;
-height:300px;
+form{
+	width:auto;
+	height:300px;
 	border:1px solid #000;
+	background-color:#0946D7;
 }
 form.frm table{
-	width:400px;
+	width:500px;
 	height:200px;
 	position:absolute;
 	margin:auto;
@@ -11,8 +13,11 @@ form.frm table{
 	
 	left:0;
 	right:0;
-	background-color:#BFBFBF;
+	background-color:#0000F4;
 	text-align:center;
+	color:#FFF;
+	font-family:Tahoma, Geneva, sans-serif;
+	font-size:25px;
 }
 input[type=text],select{
 	width:240px;
@@ -25,11 +30,19 @@ input[type=text],select{
 	text-align:center;
 }
 input[type=text]:hover,select:hover{
-	background-color:#DFDFDF;
+	background-color:#FF9191;
 }
 input[type=submit]{
-	width:50px;
+	width:80px;
 	height:50px;
-	background-color:#FF0;
+	background-color:#F00;
+	border-radius:20px;
+	-moz-border-radius:20px;
+	-ms-border-radius:10px;
+	-o-border-radius:10px;
+	-webkit-border-radius:20px;
+	font-family:Tahoma, Geneva, sans-serif;
+	font-size:20px;
+	color:#00F;
 	
 }
